# -*- org -*-

* 0.1 (Q1 2026) (cleanup repo, just keep osemgrep)

** internals
- cleanup the repo, just keep what is necessary to compile
  and test osemgrep

** testinfra
- switch to simpler Docker GHA workflow (was Dockerfile.libs) that
  just build osemgrep and run test

* ----------------------------------------------------------------------------


* Alpha (Q2 2025) (fork of semgrep 1.109)
#just before Semgrep Inc. removed support for OCaml 4

* ----------------------------------------------------------------------------

* # Changelog
Past changes were in CHANGELOG.md

## [1.109.0](https://github.com/semgrep/semgrep/releases/tag/v1.109.0) - 2025-02-19


### Changed


- Pyproject.toml files are now parsed using a toml parser (tomli). (sc-2054)


### Fixed


- pro: taint-mode: Fixed limitation in custom taint propagators.
  See https://semgrep.dev/playground/s/ReJQO (code-7967)
- taint-mode: Disable symbolic-propagation when matching taint propagators
  to prevent unintended interactions. See https://semgrep.dev/playground/s/7KE0k. (code-8054)
- Fixed pattern match deduplication to avoid an O(n^2) worst-case complexity, and
  optimized the matching of ordered `..., PAT, ...` patterns. (saf-682)


## [1.108.0](https://github.com/semgrep/semgrep/releases/tag/v1.108.0) - 2025-02-12


### Added


- pro: Semgrep can now dynamically resolve dependencies for Python projects using pip, allowing it to determine transitive dependencies automatically. (sc-2069)


### Changed


- Bump base Alpine docker image from 3.19 to 3.21. (alpine-version)
- The semgrep-appsec-platform specific metadata fields "semgrep.dev:" and
  "semgrep.policy:" are now filtered from the JSON output unless you
  are logged in with the Semgrep appsec platform.
  See https://semgrep.dev/docs/semgrep-appsec-platform/json-and-sarif#json for more information. (metadata-filter)
- The Semgrep Docker image now uses Python 3.12 (bumped from 3.11). (python-version)


### Fixed

