@@ -1,20 +1,20 @@
 # This file is generated by dune, edit dune-project instead
 opam-version: "2.0"
-version: "1.109.0"
+version: "2.0.0"
 synopsis:
   "Like grep but for code: fast and syntax-aware semantic code pattern for many languages"
 description: """
-Semgrep is like grep but for searching patterns at the AST level while
+OSemgrep is like grep but for searching patterns at the AST level while
 leveraging semantic information (e.g., types, control flow) for powerful
 matching.
 
 For more information see https://semgrep.dev
 """
-maintainer: ["Yoann Padioleau <pad@semgrep.com>"]
-authors: ["Yoann Padioleau <pad@semgrep.com>"]
+maintainer: ["Yoann Padioleau <yoann.padioleau@gmail.com>"]
+authors: ["Yoann Padioleau <yoann.padioleau@gmail.com>"]
 license: "LGPL-2.1-only"
 homepage: "https://semgrep.dev"
-bug-reports: "https://github.com/semgrep/semgrep/issues"
+bug-reports: "https://github.com/aryx/osemgrep/issues"
 depends: [
   "ocaml" {>= "4.13.0"}
   "dune" {>= "3.7" & >= "2.7.0"}
@@ -99,4 +99,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/semgrep/semgrep.git"
+dev-repo: "git+https://github.com/aryx/osemgrep.git"
